# actixweb-async-graphql

./: .env  .env.example.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
migrations/2024-01-22-151529_users/: up.sql
migrations/2024-01-23-083953_messages/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  pubsub.rs  schema.rs
src/graphql_schema/: mod.rs  mutation.rs  query.rs  subscription.rs
src/graphql_schema/messages/mutation/: mod.rs  send_message.rs
src/graphql_schema/messages/query/: get_all_messages.rs  mod.rs
src/graphql_schema/messages/subscription/: get_new_message.rs  mod.rs
src/graphql_schema/users/mutation/: login.rs  mod.rs  signup.rs
src/graphql_schema/users/query/: get_all_users.rs  mod.rs
src/graphql_schema/users/subscription/: get_new_user.rs  mod.rs
src/schema/: Mutation.rs  Query.rs  Requests.rs  mod.rs  mutation.rs  query.rs  subscription.rs
