[package]
name = "async-graphql-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
async-graphql = "7.0.0"
async-graphql-actix-web = "7.0.0"
reqwest = { version = "0.11.14", features = ["json"] }
backend={path="../profiles/backend"}
dotenvy = "0.15.7"
diesel = { version = "2.0.0", features = ["postgres","chrono","r2d2"] }
actix-cors = "0.7.0"
futures-util = "0.3.30"
async-stream = "0.3.5"
futures-timer = "3.0.2"
