[package]
name = "async-graphql-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
async-graphql = "7.0.0"
async-graphql-actix-web = "7.0.0"
dotenvy = "0.15.7"
diesel = { version = "2.0.0", features = ["postgres","chrono","r2d2"] }
actix-cors = "0.7.0"
futures-util = "0.3.30"
tokio = { version = "1.35.1", features = ["sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
async-std = "1.12.0"
