[package]
name = "async-graphql-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
async-graphql = "7.0.7"
async-graphql-actix-web = "7.0.7"
dotenvy = "0.15.7"
diesel = { version = "2.2.3", features = ["postgres", "chrono", "r2d2"] }
actix-cors = "0.7.0"
futures-util = "0.3.30"
tokio = { version = "1.39.3", features = ["sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
async-std = "1.12.0"
diesel_migrations = "2.2.0"
diesel-async = { version = "0.5.0", features = ["deadpool", "postgres"] }
thiserror = "1.0.63"
actix-session = "0.10.0"
